--- a/packages.tex
+++ b/packages.tex
@@ -4,7 +4,7 @@
 \usepackage{fancybox, fancyvrb, calc}
 \usepackage{subcaption}
 \usepackage[inline]{enumitem}
-\usepackage{amsmath, amssymb}
+\usepackage{amsmath}
 \usepackage{cite,url}
 \usepackage{pbox}
 \usepackage{balance}
@@ -12,13 +12,13 @@
 %
 %\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{mathptmx}
+%\usepackage{mathptmx}
 \usepackage{mathtools}
 \usepackage{enumitem}
 \setlist{nolistsep}
 \usepackage{hhline}
 \usepackage{appendix}
-\usepackage{sparklines}
+%\usepackage{sparklines}
 %
 %% maxwidth is the original width if it is less than linewidth
 %% otherwise use linewidth (to make sure the graphics do not exceed the margin)
@@ -113,9 +113,10 @@
 %
 \newcommand{\an}[1]{{\color{teal}\bf AN: {#1}}}
 \newcommand{\hb}[1]{{\color{brown}\bf HB: {#1}}}
-\newcommand{\ma}[1]{{\color{red}\bf MA: {#1}}}
-\newcommand{\pg}[1]{{\color{blue}\bf PG: {#1}}}
+\newcommand{\ma}[1]{{\color{purple}\bf MA: {#1}}}
+\newcommand{\pg}[1]{{\color{yellow}\bf PG: {#1}}}
 \newcommand{\fc}[1]{{\color{blue}\bf FC: {#1}}}
 \newcommand{\radhika}[1]{{\color{magenta}\bf [RM: {#1}]}}
+\newcommand{\reword}[1]{{\color{red}\emph {#1}}}
 %
 \frenchspacing
