--- a/impl.tex
+++ b/impl.tex
@@ -6,7 +6,7 @@
 \end{figure*}
 
 \cut{The prevalence of middleboxes today means that there are multiple options for implementing a \name \radhika{cut this line?}.}
-We envision a two-part design for the \inbox: a ``control plane'' and ``data plane'' separation.
+We describe a two-part design for the \inbox: a ``control plane'' and ``data plane'' separation.
 The data plane is responsible for packet forwarding, maintaining a count of the \cut{in-bundle} bytes sent, enforcing a rate and scheduling policy on the bundle, and reporting epoch boundary packets to the control plane.
 These operations can be implemented either in software, via modern platforms for network function virtualization~\cite{bess, click, mos, netbricks}, or in hardware via programmable switches~\cite{p4} \radhika{move to end, see comment at end of paragraph}.
 The control plane is responsible for computing measurements by combining feedback from the data plane and \outbox, and running the congestion control logic necessary to pick the appropriate rate for each bundle.
@@ -91,23 +91,3 @@ This control rule will rapidly grow the pacing rate at the \inbox until it stabi
 Then, using the elasticity detection mechanism described in prior work~\cite{nimbus}, \inbox can modulate the pacing rate to determine when to retake control of the queueing, and therefore the scheduling policy.
 
 \an{move the elastic cross traffic comparison results here?} \radhika{no, add a forward pointer}
-
-% \subsection{Bundle Initialization}\label{s:impl:discovery}
-
-% One practical concern in a \name deployment is how the \inbox and \outbox discover each others' presence. Of course, it is always possible to statically configure an \inbox and \outbox; however, this may be impractical as they reside in different networks.
-% Rather, we propose a bootstrapping mechanism wherein \name forms aggregates in response to observed packets.
-% This mechanism classifies packets traversing the \inbox and \outbox as either non-bundled (should be transmitted immediately and not paced in the qdisc) or bundled in a given qdisc. Different bundles may have different rates; recent work~\cite{carousel, eifel} has shown it is possible to implement such multi-rate, multi-scheduler datapaths efficiently.
-
-% The \inbox first assumes that all packets which traverse it are not bundled.
-% The \outbox does one of two things for each potential epoch boundary packet:
-% \begin{enumerate}
-%     \item If the packet is in a known bundle, the \outbox sends a message to the corresponding \inbox.
-%     \item If the packet is not in a known bundle, the \outbox sends a message to the source IP address of that packet.
-% \end{enumerate}
-
-% The \inbox receives (and intercepts) the \outbox feedback.  
-% The \inbox at this time updates its flow tables to add the destination IP of the epoch boundary packet either to an existing bundle (in the case of a new flow from a previously-unseen source subnet joining a bundle) or instantiates a new bundle.
-% The \inbox then sends a response containing an epoch size to use and the hash of the epoch boundary packet.
-% The \outbox receives this message, initializes a byte counter for the newly discovered bundle, and remembers the \inbox IP address for future feedback. If there is no \inbox on the path, the packet will simply be ignored at its destination. 
-
-
