--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,5 @@
 \section{Introduction}\label{s:intro}
 
-
 %\radhika{Alternate intro: mostly just changed the flow of certain points, removed some that might be better suited in related work, and made some more concrete/specific. /*}
 
 %lots of scheduling algorithms proposed. scheduling used in private wans. seems clearly beneficial.
@@ -27,21 +26,23 @@ Individual ISPs, on the other hand, do have control over the queued up links in 
 %, they have no way of knowing whether it was done appropriately. 
 
 %So to summarize, while customers may not have enough control over the queued-up links in the network to effectively enforce their desired policies, the ISPs may not have enough incentives or enough visibility into the traffic to do so. 
-Thus, to reduce a customer's dependence on the ISPs with respect to how its traffic gets managed, this paper attempts to bring a customer's traffic under its own control by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, therefore, allows the customer to effectively enforce its desired scheduling and queue management policies across traffic that share common sender and receiver domains (as described later). The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
+To reduce a customer's dependence on the ISPs with respect to how its traffic is managed, this paper attempts to bring a customer's traffic under its own control by simply \emph{moving the queues built in the network to the customer's edge}. \reword{Our approach, therefore}, allows the customer to effectively enforce its desired scheduling and queue management policies across traffic that share common sender and receiver domains (as described later). The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
 
 We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network. Examples include traffic between a large content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
 
-We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
+We \reword{further} note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
 
-We, therefore, propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle as per the customer's requirements. 
+We \reword{now} propose a new type of middlebox, called a \name, that (1) aggregates the traffic at the customer's egress into appropriate bundles, (2) does rate control for each bundle to shift the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle as per the customer's requirements. 
 
 %\radhika{add a few lines on \name's high level architecture.} 
- A \name comprises of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A bundle is, thus, defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a standard congestion control algorithm (having certain properties, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck link in the network remains fully utilized. 
+\fc{is it not bad to bring up the two-box design here if we don't justify it until later?}
+ A \name is comprised of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is then defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a standard congestion control algorithm (\reword{having certain properties}, as described later) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck link in the network remains fully utilized. 
  
  We introduce a novel light-weight methodology for the coordination between the \inbox and the \outbox, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edge, and requires no changes to the individual end-hosts (unless needed for a specific scheduling policy \eg adding priority values to packet headers) or to the routers in the network. 
  
  Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not attempt to tackle the significantly more ambitious objective of scheduling traffic across different customers. Furthermore, as we will discuss later, there can be instances where \name fails to provide any performance benefits for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, in its simplicity, provides an \emph{immediately deployable} solution for enabling some of the benefits of scheduling and queue management in the Internet, which is something that has been missing from the scheduling literature so far. 
+ \fc{We should say something somewhere about sched across bundles and in-bundle/out-of-bundle}
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
 
 % We make the following key contributions:
