--- a/graphs/strict-prio.Rnw
+++ b/graphs/strict-prio.Rnw
@@ -1,37 +1,47 @@
-\begin{figure}
-    \centering
-    <<robust:strict-prio,fig.showtext=TRUE,cache=TRUE,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2.5>>=
-library(ggplot2)
-library(showtext)
-font_add_google("Lato")
-showtext_auto()
+<<robust:strict-prio,cache=TRUE,echo=FALSE,warning=FALSE>>=
 df <- read.csv("strictprio.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
 df$ofct <- (df$Size / 12e6) + 0.05
 df$Slowdown <- df$Duration / df$ofct
 df <- df[df$Alg == "copa_prio" | df$Alg == "nobundler_fifo",]
 
-ggplot(df, aes(x=Alg, y=Slowdown, fill=Alg)) +
-    geom_boxplot(outlier.shape=NA) +
-    scale_x_discrete(
-        limit=c("copa_prio", "nobundler_fifo"),
-        labels=c(
-            "copa_prio" = "Bundler (Priority)",
-            "nobundler_fifo" = "Status Quo"
-        ),
-        scale_name=NULL, name=NULL
-    ) +
-    scale_fill_brewer(type="qual", palette=2) + guides(fill=FALSE) +
-    ylab("Slowdown") +
-    coord_cartesian(ylim=c(1,4)) +
-    theme_minimal() +
-    theme(
-        legend.position="top",
-        legend.title=element_blank(),
-        text = element_text(size=18, family="Lato", face="bold"),
-        plot.title = element_text(size=18, family="Lato", face="bold", hjust = 0.5)
-    )
+# don't plot
+#ggplot(df, aes(x=Alg, y=Slowdown, fill=Alg)) +
+#    geom_boxplot(outlier.shape=NA) +
+#    scale_x_discrete(
+#        limit=c("copa_prio", "nobundler_fifo"),
+#        labels=c(
+#            "copa_prio" = "Bundler (Priority)",
+#            "nobundler_fifo" = "Status Quo"
+#        ),
+#        scale_name=NULL, name=NULL
+#    ) +
+#    scale_fill_brewer(type="qual", palette=2) + guides(fill=FALSE) +
+#    ylab("Slowdown") +
+#    coord_cartesian(ylim=c(1,4)) +
+#    theme_minimal() +
+#    theme(
+#        legend.position="top",
+#        legend.title=element_blank(),
+#        text = element_text(size=18, family="Lato", face="bold"),
+#        plot.title = element_text(size=18, family="Lato", face="bold", hjust = 0.5)
+#    )
+
+# calculate values for table
+strictprio_copa_prio <- df[df$Alg == "copa_prio",]
+strictprio_nobundler <- df[df$Alg == "nobundler_fifo",]
+
+strictprio_copa_prio <- quantile(strictprio_copa_prio$Slowdown, c(0.5, 0.99))
+strictprio_nobundler <- quantile(strictprio_nobundler$Slowdown, c(0.5, 0.99))
+
 @
-    \caption{Strict prioritization. Prioritizing one class of web requests reduces its FCTs significantly.}
+\begin{centering}
+\begin{tabular}{c|c|c}
+Scheme     &  Median                                    &  $99$\%ile                                 \\
+\hline
+Bundler    &  \Sexpr{round(strictprio_copa_prio[1],2)}  &  \Sexpr{round(strictprio_copa_prio[2],2)}  \\
+\baseline  &  \Sexpr{round(strictprio_nobundler[1],2)}  &  \Sexpr{round(strictprio_nobundler[2],2)}
     \label{fig:eval:strict-prio}
-\end{figure}
+\end{tabular}
+\end{centering}
+
