--- a/strict-prio.tex
+++ b/strict-prio.tex
@@ -1,10 +1,11 @@
-\begin{figure}
-    \centering
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/robust:strict-prio-1} 
 
-\end{knitrout}
-    \caption{Strict prioritization. Prioritizing one class of web requests reduces its FCTs significantly.}
+\begin{centering}
+\begin{tabular}{c|c|c}
+Scheme     &  Median                                    &  $99$\%ile                                 \\
+\hline
+Bundler    &  1.07  &  10.52  \\
+\baseline  &  3.07  &  201.72
     \label{fig:eval:strict-prio}
-\end{figure}
+\end{tabular}
+\end{centering}
+
